# svensk-text-preprocessor

./: .gitignore  README.md  luhn.py  main.py  pyproject.toml
svensk_text_preprocessor/: identities.py  normalizer.py
tests/: test_identities.py  test_normalizer.py
